<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.login.screens.getStarted.GetStartedFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/getStartedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="16dp"
            android:text="@string/get_started"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintBottom_toTopOf="@id/enter_mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country_code_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="@dimen/margin_narrow"
            android:text="@string/country_code"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/enter_mobile_number"
            app:layout_constraintBottom_toTopOf="@id/continue_button"
            app:layout_constraintEnd_toStartOf="@id/enter_mobile_number"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_started" />

        <EditText
            android:id="@+id/enter_mobile_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:ems="10"
            android:maxLength="10"
            android:typeface="monospace"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@id/continue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/country_code_box"
            app:layout_constraintTop_toBottomOf="@+id/get_started" />

        <Button
            android:id="@+id/continue_button"
            style="@style/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="CONTINUE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_mobile_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>