<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/verify_and_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/verify_and_login"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintBottom_toTopOf="@id/enter_otp_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_otp_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="16dp"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@id/otp_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_and_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_text_input_layout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/resend_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_otp_message" >
            <EditText
                android:id="@+id/enter_otp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:ems="4"
                android:maxLength="4"
                android:hint="@string/enter_otp_text"
                android:inputType="numberPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="8dp"
            android:text="@string/resend_otp_text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/verify_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_text_input_layout" />

        <Button
            android:id="@+id/verify_button"
            style="@style/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="VERIFY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resend_otp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>